--- a/about.html
+++ b/about.html
@@ -9,25 +9,25 @@ This website is made by members and developers of the PS2 Homebrew Scene in an a
 
 
  <p><a id="Terms-of-Service"> </a>
- <a href="#Terms-of-Service"><h3>➽ Terms of Service</h3></a>
-By continuing to interact or use any service related to https://ps2wiki.github.io or https://github.com/ps2wiki you are agreeing to the terms mentioned below unless otherwise stated explicitly. Please read them carefully.
+ <a href="#Terms-of-Service"><h3>➽ Terms of Service</h3></a><ol>  
+By continuing to interact or use any service related to https://ps2wiki.github.io or https://github.com/ps2wiki you are agreeing to the terms mentioned below unless otherwise stated explicitly. Please read them carefully.  
 
-1. You are free to use or cite any article, post or resource from PS2Wiki both within and outside the site. However, a link to the original resource must be provided or prior consent to use said resource must be taken from the owner(s) or author(s).
+<li>You are free to use or cite any article, post or resource from PS2Wiki both within and outside the site. However, a link to the original resource must be provided or prior consent to use said resource must be taken from the owner(s) or author(s).</li>
 
-2. Even though all material on this website has been contributed and verified by skilled volunteers, mistakes can sometimes seep through. The Maintainers of this site (The PS2Wiki Team) are not responsible for any accidents or unforeseen situations which might arise as a consequence of following any material on this site. You are advised to do your own diligence before engaging with any resource on this site. 
-You are however requested to <a href="https://github.com/ps2wiki/ps2wiki.github.io/issues/new/choose">raise an issue on GitHub</a> in the event you do come across an inaccuracy.
+<li>Even though all material on this website has been contributed and verified by skilled volunteers, mistakes can sometimes seep through. The Maintainers of this site (The PS2Wiki Team) are not responsible for any accidents or unforeseen situations which might arise as a consequence of following any material on this site. You are advised to do your own diligence before engaging with any resource on this site.  
+You are however requested to <a href="https://github.com/ps2wiki/ps2wiki.github.io/issues/new/choose">raise an issue on GitHub</a> in the event you do come across an inaccuracy.</li>
 
-3. The look and feel of the Website and related projects are property of The PS2Wiki Team. You may not duplicate, copy or reuse any portion of the HTML, CSS or JavaScript or visual design elements or concepts which are unique to PS2Wiki either partially or ein their entirety in such a way which recreates or replicates the general look and feel of the website or harms the PS2Wiki or The PS2Wiki Team in any way.
+<li>The look and feel of the Website and related projects are property of The PS2Wiki Team. You may not duplicate, copy or reuse any portion of the HTML, CSS or JavaScript or visual design elements or concepts which are unique to PS2Wiki either partially or ein their entirety in such a way which recreates or replicates the general look and feel of the website or harms the PS2Wiki or The PS2Wiki Team in any way.</li>
 
-4. You are not to hack, reverse engineer, misinterpret in bad faith or misuse any resource related to or on this website.
+<li>You are not to hack, reverse engineer, misinterpret in bad faith or misuse any resource related to or on this website.</li>
 
-5. In addition to these terms, you also agree to abide by <a href="https://docs.github.com/en/site-policy/github-terms/github-terms-of-service">GitHub's Terms of Service</a>, <a href="https://github.com/ps2wiki/ps2wiki.github.io/blob/upstream/LICENSE.md">the site LICENSE</a> and any related/relevant laws within your country or locality.
+<li>In addition to these terms, you also agree to abide by <a href="https://docs.github.com/en/site-policy/github-terms/github-terms-of-service">GitHub's Terms of Service</a>, <a href="https://github.com/ps2wiki/ps2wiki.github.io/blob/upstream/LICENSE.md">the site LICENSE</a> and any related/relevant laws within your country or locality.</li></ol>
 
 
-Disclosures:
-1. This site has been built using <a href="https://pages.github.com">GitHub's Pages feature</a>, <a href="https://jekyllrb.com">Jekyll</a> and <a href="https://github.com/jeffreytse/jekyll-theme-yat">Yat Theme</a> and other technologies. They are each a property of their respective Owner(s) or Author(s) and The PS2Wiki Team or its members do not claim ownership over any of these.
+<h4>➽ Disclosures</h4>
+<ol><li>This site has been built using <a href="https://pages.github.com">GitHub's Pages feature</a>, <a href="https://jekyllrb.com">Jekyll</a> and <a href="https://github.com/jeffreytse/jekyll-theme-yat">Yat Theme</a> and other technologies. They are each a property of their respective Owner(s) or Author(s) and The PS2Wiki Team or its members do not claim ownership over any of these.</li>
 
-2. These terms have been written in good faith to protect the interests of the Users, Creators, Contributors and anyone else who is involved directly or indirectly in the creation of this project. If you believe any point here violates your right as any party mentioned above or otherwise, you can raise an issue <a href="https://github.com/ps2wiki/ps2wiki.github.io/issues/new?assignees=koraxial&labels=documentation&projects=&template=violation.yml&title=%5BVIOLATION%5D%3A+">here</a>.
+<li>These terms have been written in good faith to protect the interests of the Users, Creators, Contributors and anyone else who is involved directly or indirectly in the creation of this project. If you believe any point here violates your right as any party mentioned above or otherwise, you can raise an issue <a href="https://github.com/ps2wiki/ps2wiki.github.io/issues/new?assignees=koraxial&labels=documentation&projects=&template=violation.yml&title=%5BVIOLATION%5D%3A+">here</a>.</li></ol> 
 
 <div class="note">
 <strong>Note:</strong> The terms mentioned above are subject to change without prior notice.
