--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@ This website is made by members and developers of the PS2 Homebrew Scene in an a
 
  <p><a id="Terms-of-Service"> </a>
  <a href="#Terms-of-Service"><h3>➽ Terms of Service</h3></a><ol></br>
-By continuing to interact or use any service related to <a href="https://ps2wiki.github.io">https://ps2wiki.github.io</a> or <a href="https://github.com/ps2wiki">https://github.com/ps2wiki</a> you are agreeing to the terms mentioned below unless otherwise stated explicitly. Please read them carefully.</br>
+By continuing to interact or use any service related to <a href="https://ps2wiki.github.io">https://ps2wiki.github.io</a> or <a href="https://github.com/ps2wiki">https://github.com/ps2wiki</a> you are agreeing to the terms mentioned below unless otherwise stated explicitly. Please read them carefully.</br></br>
 
 <li>You are free to use or cite any article, post or resource from PS2Wiki both within and outside the site. However, a link to the original resource must be provided or prior consent to use said resource must be taken from the owner(s) or author(s).</li>
 
