--- a/about.html
+++ b/about.html
@@ -3,12 +3,11 @@ layout: about
 title: About
 ---
 
-<p>
 Welcome to The PS2 Homebrew Wiki! </br> 
 This website is made by members and developers of the PS2 Homebrew Scene in an attempt to make it easier for people to mod their PS2s and learn about stuff regarding the console. 
 
 
- <p><h3>➽ Terms of Service</h3><ol></br>
+<h3>➽ Terms of Service</h3><ol></br>
 By continuing to interact or use any service related to <a href="https://ps2wiki.github.io">https://ps2wiki.github.io</a> or <a href="https://github.com/ps2wiki">https://github.com/ps2wiki</a> you are agreeing to the terms mentioned below unless otherwise stated explicitly. Please read them carefully.</br></br>
 
 <li>You are free to use or cite any article, post or resource from PS2Wiki both within and outside the site. However, a link to the original resource must be provided or prior consent to use said resource must be taken from the owner(s) or author(s).</li>
@@ -31,8 +30,6 @@ You are however requested to <a href="https://github.com/ps2wiki/ps2wiki.github.
 </br><div class="note">
 <strong>Note:</strong> The terms mentioned above are subject to change without prior notice.
 </div> 
-</p>
-
 
 <h4>➜ Disclaimer</h4>
  <div class="warning">
@@ -44,4 +41,3 @@ You are however requested to <a href="https://github.com/ps2wiki/ps2wiki.github.
  <div class="alert">
   While all information here is provided in good faith, we are in no way responsible for any damage caused to an individual/group and/or their console or other hardware by any information provided on this website. For your own safety: read twice, do once.
 </div> 
-</p>
