--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@ Welcome to The PS2 Homebrew Wiki! </br>
 This website is made by members and developers of the PS2 Homebrew Scene in an attempt to make it easier for people to mod their PS2s and learn about stuff regarding the console. 
 
 
-<h3 id="ToS">➽ Terms of Service</h3><ol></br>
+<h3 id="Terms-of-Service">➽ Terms of Service</h3><ol></br>
 By continuing to interact or use any service related to <a href="https://ps2wiki.github.io">https://ps2wiki.github.io</a> or <a href="https://github.com/ps2wiki">https://github.com/ps2wiki</a> you are agreeing to the terms mentioned below unless otherwise stated explicitly. Please read them carefully.</br></br>
 
 <li>You are free to use or cite any article, post or resource from PS2Wiki both within and outside the site. However, a link to the original resource must be provided or prior consent to use said resource must be taken from the owner(s) or author(s).</li>
@@ -22,7 +22,7 @@ You are however requested to <a href="https://github.com/ps2wiki/ps2wiki.github.
 </br><li>In addition to these terms, you also agree to abide by <a href="https://docs.github.com/en/site-policy/github-terms/github-terms-of-service">GitHub's Terms of Service</a>, <a href="https://github.com/ps2wiki/ps2wiki.github.io/blob/upstream/LICENSE.md">the site LICENSE</a> and any related/relevant laws within your country or locality.</li></ol>
 
 
-<h4>➜ Disclosures</h4>
+<h4 id="Disclosures">➜ Disclosures</h4>
 </br><ol><li>This site has been built using <a href="https://pages.github.com">GitHub's Pages feature</a>, <a href="https://jekyllrb.com">Jekyll</a> and <a href="https://github.com/jeffreytse/jekyll-theme-yat">Yat Theme</a> and other technologies. They are each a property of their respective Owner(s) or Author(s) and The PS2Wiki Team or its members do not claim ownership over any of these.</li>
 
 </br><li>These terms have been written in good faith to protect the interests of the Users, Creators, Contributors and anyone else who is involved directly or indirectly in the creation of this project. If you believe any point here violates your right as any party mentioned above or otherwise, you can raise an issue <a href="https://github.com/ps2wiki/ps2wiki.github.io/issues/new?assignees=koraxial&labels=documentation&projects=&template=violation.yml&title=%5BVIOLATION%5D%3A+">here</a>.</li></ol> 
@@ -31,13 +31,13 @@ You are however requested to <a href="https://github.com/ps2wiki/ps2wiki.github.
 <strong>Note:</strong> The terms mentioned above are subject to change without prior notice.
 </div> 
 
-<h4>➜ Disclaimer</h4>
+<h4 id="Disclaimer">➜ Disclaimer</h4>
  <div class="warning">
   This site isn't affiliated to and/or endorsed by Sony in any capacity. </br>
   This site and it's members <b>DO NOT</b> endorse piracy and any guides or information on the website assumes that the individual engaging is using their own legally obtained media only.
 </div> 
 
-<h4>➜ Warning</h4>
+<h4 id="Warning">➜ Warning</h4>
  <div class="alert">
   While all information here is provided in good faith, we are in no way responsible for any damage caused to an individual/group and/or their console or other hardware by any information provided on this website. For your own safety: read twice, do once.
 </div> 
