--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@ title: About
 Welcome to The PS2 Homebrew Wiki! </br> 
 This website is made by members and developers of the PS2 Homebrew Scene in an attempt to make it easier for people to mod their PS2s and learn about stuff regarding the console. 
 
-
+<p><a id="terms-of-service"> </a>
 <h3 id="Terms-of-Service">➽ Terms of Service</h3><ol></br>
 By continuing to interact or use any service related to <a href="https://ps2wiki.github.io">https://ps2wiki.github.io</a> or <a href="https://github.com/ps2wiki">https://github.com/ps2wiki</a> you are agreeing to the terms mentioned below unless otherwise stated explicitly. Please read them carefully.</br></br>
 
@@ -30,6 +30,7 @@ You are however requested to <a href="https://github.com/ps2wiki/ps2wiki.github.
 </br><div class="note">
 <strong>Note:</strong> The terms mentioned above are subject to change without prior notice.
 </div> 
+</p>
 
 <h4 id="Disclaimer">➜ Disclaimer</h4>
  <div class="warning">
