--- a/links_and_sources.html
+++ b/links_and_sources.html
@@ -4,30 +4,30 @@ title: Links & Sources
 ---
 
 <p>
-<h3><i class="fa fa-link"> ➽ </i> Useful Links</h3>
-<ul><h4><li><a href="https://www.psx-place.com">➜ PSX-Place</a></li></h4>
+<h3 id="useful-links"><i class="fa fa-link"> ➽ </i> Useful Links</h3>
+<ul><h4 id="useful-links-1"><li><a href="https://www.psx-place.com">➜ PSX-Place</a></li></h4>
 PSX-Place.com is dedicated to bringing you the latest Homebrew, Hacking, Exploits, CFW, Jailbreak & PlayStation Scene News to your fingertips.
 
-<h4><li><a href="https://github.com/ps2homebrew">➜ PS2 Homebrew Projects GitHub</a></li></h4>
+<h4 id="useful-links-2"><li><a href="https://github.com/ps2homebrew">➜ PS2 Homebrew Projects GitHub</a></li></h4>
 A collection of free tools for the Sony PlayStation 2® videogame system and similar hardware.
 </ul></br></p>
 
 <hr>
 
 <p>
-<h3><i class="fa  fa-code"> ➽ </i> Homebrew Apps</h3>
-<ul><h4><li><a href="https://github.com/ps2homebrew/Open-PS2-Loader">➜ Open PS2 Loader (OPL)</a></li></h4>
+<h3 id="homebrew-apps"><i class="fa  fa-code"> ➽ </i> Homebrew Apps</h3>
+<ul><h4 id="homebrew-apps-1"><li><a href="https://github.com/ps2homebrew/Open-PS2-Loader">➜ Open PS2 Loader (OPL)</a></li></h4>
 Open PS2 Loader (OPL) is a 100% Open source game and application loader for the PS2 and PS3 units. It supports three categories of devices: USB mass storage devices, SMB shares and the PlayStation 2 HDD unit. 
 USB devices and SMB shares support USBExtreme and *.ISO formats while PS2 HDD supports HDLoader format, all devices also support ZSO format (compressed ISO). It's now the most compatible homebrew loader.
 
-<h4><li><a href="https://www.psx-place.com/threads/fmcb-fhdb-v1-9-series-release-thread.13413/">➜ Free MemoryCard Boot (FMCB)</a></li></h4>
+<h4 id="homebrew-apps-2"><li><a href="https://www.psx-place.com/threads/fmcb-fhdb-v1-9-series-release-thread.13413/">➜ Free MemoryCard Boot (FMCB)</a></li></h4>
 Free Memory Card Boot (FMCB) is a piece of homebrew software, which is designed to setup your PlayStation 2 console and provides you with means of launching homebrew software, 
 without the need for any extra hardware, modifications to your console or dangerous tricks like the legendary swap trick.
 
-<h4><li><a href="https://www.psx-place.com/threads/fmcb-fhdb-v1-9-series-release-thread.13413/">➜ Free HardDrive Boot (FHDB)</a></li></h4>
+<h4 id="homebrew-apps-2"><li><a href="https://www.psx-place.com/threads/fmcb-fhdb-v1-9-series-release-thread.13413/">➜ Free HardDrive Boot (FHDB)</a></li></h4>
 Free Harddisk Drive Boot (FHDB) is basically FMCB that gets installed onto the PlayStation 2 console's HDD unit. It does everything like FMCB does, but is meant to be used with the Sony HDDOSD (Browser update v2.00).
 
-<h4><li><a href="https://ps2wiki.github.io/Homebrew/PS2-App-System/SAS/introduction.html">➜ Save Application System (SAS)</a></li></h4>
+<h4  id="homebrew-apps-3"><li><a href="https://ps2wiki.github.io/Homebrew/PS2-App-System/SAS/introduction.html">➜ Save Application System (SAS)</a></li></h4>
 A new App-System for PS2, which integrates more seamlessly and easier for the end-user, into the PS2's setup and the general Homebrew-Ecosystem.
 </ul></br></p>
 
