--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@ By continuing to interact or use any service related to <a href="https://ps2wiki
 </br><li>Even though all material on this website has been contributed and verified by skilled volunteers, mistakes can sometimes seep through. The Maintainers of this site (The PS2Wiki Team) are not responsible for any accidents or unforeseen situations which might arise as a consequence of following any material on this site. You are advised to do your own diligence before engaging with any resource on this site.  
 You are however requested to <a href="https://github.com/ps2wiki/ps2wiki.github.io/issues/new/choose">raise an issue on GitHub</a> in the event you do come across an inaccuracy.</li>
 
-</br><li>The look and feel of the Website and related projects are property of The PS2Wiki Team. You may not duplicate, copy or reuse any portion of the HTML, CSS or JavaScript or visual design elements or concepts which are unique to PS2Wiki either partially or ein their entirety in such a way which recreates or replicates the general look and feel of the website or harms the PS2Wiki or The PS2Wiki Team in any way.</li>
+</br><li>The look and feel of the Website and related projects are property of The PS2Wiki Team. You may not duplicate, copy or reuse any portion of the HTML, CSS or JavaScript or visual design elements or concepts which are unique to PS2Wiki either partially or in their entirety in such a way which recreates or replicates the general look and feel of the website or harms the PS2Wiki or The PS2Wiki Team in any way.</li>
 
 </br><li>You are not to hack, reverse engineer, misinterpret in bad faith or misuse any resource related to or on this website.</li>
 
