--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 ---
+#########################
 # News & Tips
 
 news: Open PS2 Loader v1.2.0-Beta-2173 has been released on <a href="https://github.com/ps2homebrew/Open-PS2-Loader/releases/tag/latest">GitHub<sup><i class="fa fa-paperclip"></i></sup></a> !
-tips: Check back everyday for new PS2 tips!
+tips: Check back everyday for short and informative PS2 tips!
 
-#################################################
+#########################
 
 # Feel free to add content and custom Front Matter to this file.
 # To modify the layout, see https://jekyllrb.com/docs/themes/#overriding-theme-defaults
