--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ banner:
   min_height: "10vh"
   heading_style: "font-family: Faculty Glyphic; text-align: center; font-size: 3.5em; font-weight: bold; text-decoration: underline"
   subheading_style: "font-size: 1.35em; text-align: center; font-weight: bold; color: #99b6b9"
+image: "/assets/images/ps2wiki_branding-1.png"
 top: 1
 sidebar: []
 ---
