--- a/get_started.html
+++ b/get_started.html
@@ -53,7 +53,7 @@ title: Get Started
             </ol>
             <br>
             <div class="container">
-                <img style="border:2px solid #16537e" width="700" height="550" src="https://s.yimg.com/ny/api/res/1.2/u6_1ukNEFKoR20ynAAqN8A--/YXBwaWQ9aGlnaGxhbmRlcjt3PTY0MDtoPTM2MA--/https://media.zenfs.com/en/playstation_lifestyle_666/e3c727043f7cfde121c27f3df089fa6a">
+                <img style="border:2px solid #16537e" width="615" height="346" src="https://s.yimg.com/ny/api/res/1.2/u6_1ukNEFKoR20ynAAqN8A--/YXBwaWQ9aGlnaGxhbmRlcjt3PTY0MDtoPTM2MA--/https://media.zenfs.com/en/playstation_lifestyle_666/e3c727043f7cfde121c27f3df089fa6a" alt="Images showing PS2 Pha & PS2 Slim">
             </div>
             <p align="center">Left: PS2 Phat | Right: PS2 Slim</p>
             Apart from this, other model groups such as the PSX-DESR, and the Sony Bravia KDL-22PX300 also exist. Since they are quite uncommon outside of certain regions, we won't cover them here.
@@ -79,10 +79,10 @@ title: Get Started
                     The most common prefix is <code>SCPH</code> and denotes that the console is a PS2. The prefix can also be <code>KDL</code>for the Bravia TV with PS2, <code>DESR</code> for PSX-DESR, <code>DTL-H</code> for Test Kits, <code>DTL-T</code> for Dev Kits, <code>COH-H</code> for arcade hardware and <code>EB</code> for Prototype models.
                     Further sections will cover models starting with <code>SCPH</code>. 
                 </br></br>
-                <li><strong>First two letters:</strong></li>
+                <li><strong>First two digits:</strong></li>
                     Denote the chassis or motherboard revisions. For our purposes though, knowing that numbers <code><70XXX</code> represent Phat models and <code>>=70XXX</code> represent Slimline models is enough.
                 </br></br>
-                <li><strong>Last two letters:</strong></li>
+                <li><strong>Last two digits:</strong></li>
                     Denote the region the console belongs to. They are mostly irrelevant when it comes to determining the functionality of the console, but knowing your region code is handy when using/installing certain homebrew like <a href="https://www.psx-place.com/threads/fmcb-fhdb-v1-9-series-release-thread.13413/">FreeMCBoot</a>/<a href="https://www.psx-place.com/threads/fmcb-fhdb-v1-9-series-release-thread.13413/">FreeHDBoot</a> or <a href="https://github.com/MechaResearch/MechaPwn">MechaPwn</a>.
                 </br></br>
                 <li><strong>Suffixes:</strong></li>
