--- a/get_started.html
+++ b/get_started.html
@@ -53,7 +53,7 @@ title: Get Started
             </ol>
             <br>
             <div class="container">
-                <img style="border:2px solid #16537e" width="615" height="346" src="https://s.yimg.com/ny/api/res/1.2/u6_1ukNEFKoR20ynAAqN8A--/YXBwaWQ9aGlnaGxhbmRlcjt3PTY0MDtoPTM2MA--/https://media.zenfs.com/en/playstation_lifestyle_666/e3c727043f7cfde121c27f3df089fa6a" alt="Images showing PS2 Pha & PS2 Slim">
+                <img style="border:2px solid #16537e" width="615" src="https://s.yimg.com/ny/api/res/1.2/u6_1ukNEFKoR20ynAAqN8A--/YXBwaWQ9aGlnaGxhbmRlcjt3PTY0MDtoPTM2MA--/https://media.zenfs.com/en/playstation_lifestyle_666/e3c727043f7cfde121c27f3df089fa6a" alt="Images showing PS2 Pha & PS2 Slim">
             </div>
             <p align="center">Left: PS2 Phat | Right: PS2 Slim</p>
             Apart from this, other model groups such as the PSX-DESR, and the Sony Bravia KDL-22PX300 also exist. Since they are quite uncommon outside of certain regions, we won't cover them here.
