--- a/Homebrew/PS2-App-System/SAS/introduction.html
+++ b/Homebrew/PS2-App-System/SAS/introduction.html
@@ -1,10 +1,7 @@
 ---
 layout: homebrew
-title: SAS
-subtitle: Save Application System
-banner: 
-  image: https://i.pinimg.com/474x/36/6b/8b/366b8b5f7df4c85da3be0a0f16fe8bfc.jpg
-  opacity: 0.5
-image: https://i.pinimg.com/474x/36/6b/8b/366b8b5f7df4c85da3be0a0f16fe8bfc.jpg
-tags: sas
+h.title: SAS
+h.subtitle: Save Application System
+h.banner: https://i.pinimg.com/474x/36/6b/8b/366b8b5f7df4c85da3be0a0f16fe8bfc.jpg
+h.image: https://i.pinimg.com/474x/36/6b/8b/366b8b5f7df4c85da3be0a0f16fe8bfc.jpg
 ---
