--- a/Homebrew/PS2-App-System/SAS/introduction.html
+++ b/Homebrew/PS2-App-System/SAS/introduction.html
@@ -1,5 +1,6 @@
 ---
 layout: homebrew
+title: Save Application System
 h-title: Save Application System
 h-subtitle: A new App-System for PS2, which integrates more seamlessly and easier for the end-user, into the PS2's setup and the general Homebrew-Ecosystem
 h-banner: https://i.pinimg.com/474x/36/6b/8b/366b8b5f7df4c85da3be0a0f16fe8bfc.jpg
