--- a/Homebrew/PS2-App-System/SAS/introduction/introduction.html
+++ b/Homebrew/PS2-App-System/SAS/introduction/introduction.html
@@ -4,7 +4,7 @@ title: Save Application System
 subtitle: >-
   A new App-System for PS2 which integrates seamlessly into the user's PS2 setup and the general Homebrew-Ecosystem
 
-banner: https://i.pinimg.com/474x/36/6b/8b/366b8b5f7df4c85da3be0a0f16fe8bfc.jpg
+banner-bg: https://i.pinimg.com/474x/36/6b/8b/366b8b5f7df4c85da3be0a0f16fe8bfc.jpg
 image: https://i.pinimg.com/474x/36/6b/8b/366b8b5f7df4c85da3be0a0f16fe8bfc.jpg
 ---
 
