--- a/documentation/homebrew/PS2-App-System/SAS/introduction/introduction.html
+++ b/documentation/homebrew/PS2-App-System/SAS/introduction/introduction.html
@@ -1,5 +1,5 @@
 ---
-layout: homebrew
+layout: docs-homebrew
 title: Save Application System
 subtitle: >-
   A new App-System for PS2 which integrates seamlessly into the user's PS2 setup and the general Homebrew-Ecosystem
