--- a/documentation/homebrew/PS2-App-System/SAS/introduction/introduction.html
+++ b/documentation/homebrew/PS2-App-System/SAS/introduction/introduction.html
@@ -8,6 +8,7 @@ image: https://i.pinimg.com/474x/36/6b/8b/366b8b5f7df4c85da3be0a0f16fe8bfc.jpg
 thumbnail: https://i.pinimg.com/474x/36/6b/8b/366b8b5f7df4c85da3be0a0f16fe8bfc.jpg
 last_updated: 2024/11/22
 project_status: In Active Development
+comments: false
 ---
 
 <!-- Warning -->
