--- a/documentation/homebrew/PS2-App-System/SAS/introduction/introduction.html
+++ b/documentation/homebrew/PS2-App-System/SAS/introduction/introduction.html
@@ -4,8 +4,8 @@ title: Save Application System
 subtitle: >-
   A new App-System for PS2 which integrates seamlessly into the user's PS2 setup and the general Homebrew-Ecosystem
 
-image: https://i.pinimg.com/474x/36/6b/8b/366b8b5f7df4c85da3be0a0f16fe8bfc.jpg
-thumbnail: https://i.pinimg.com/474x/36/6b/8b/366b8b5f7df4c85da3be0a0f16fe8bfc.jpg
+image: https://github.com/ps2wiki/ps2wiki.github.io/blob/upstream/documentation/homebrew/PS2-App-System/SAS/introduction/sas_thumbnail.jpg?raw=true
+thumbnail: https://github.com/ps2wiki/ps2wiki.github.io/blob/upstream/documentation/homebrew/PS2-App-System/SAS/introduction/sas_thumbnail.jpg?raw=true
 last_updated: 2024/11/22
 project_status: In Active Development
 ---
