--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 #########################
 # News & Tips
 
-news: Open PS2 Loader v1.2.0-Beta-2173 has been released on <a href="https://github.com/ps2homebrew/Open-PS2-Loader/releases/tag/latest">GitHub<sup><i class="fa fa-paperclip"></i></sup></a> !
+news: >-
+  Open PS2 Loader v1.2.0-Beta-2173 has been released on <a href="https://github.com/ps2homebrew/Open-PS2-Loader/releases/tag/latest">GitHub<sup><i class="fa fa-paperclip"></i></sup></a> !
 
-tips: Check back everyday for short and informative PS2 tips!
+tips: >-
+  Press the <code>🛆</code> button in the browser to view your Model Number!
 
 #########################
 
