--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 # News & Tips
 
 news: >-
-  Open PS2 Loader v1.2.0-Beta-2173 has been released on <a href="https://github.com/ps2homebrew/Open-PS2-Loader/releases/tag/latest">GitHub<sup><i class="fa fa-paperclip"></i></sup></a> !
+  Open PS2 Loader v1.2.0-Beta-2173 has been released on <a href="https://github.com/ps2homebrew/Open-PS2-Loader/releases/tag/latest">GitHub<sup><i class="fa fa-external-link-alt"></i></sup></a> !
 
 tips: >-
-  Press the <code>🛆</code> button in the browser to view your Model Number!
+  Press the <code>🛆</code> button in the <a href="https://i.ytimg.com/vi/vKqYfOM4Jao/sddefault.jpg">OSD-SYS<sup><i class="fa fa-external-link-alt"></i></sup></a> to view your Model Number!
 
 #########################
 
