--- a/documentation/homebrew/PS2-App-System/SAS/indicators-and-warnings/indicators-and-warnings.html
+++ b/documentation/homebrew/PS2-App-System/SAS/indicators-and-warnings/indicators-and-warnings.html
@@ -20,7 +20,7 @@ Read these carefully, ignoring these crucial indicators might cause catastrophic
 <h3>1. Deletion of System Vital Apps</h3> 
 <div class="container">
     <img style="border:2px solid #16537e" align="left" width="400" src="https://raw.githubusercontent.com/ps2wiki/ps2wiki.github.io/refs/heads/main/_posts/PS2-App-System/SAS/2024-08-19-sas-warnings-megapost/assets/DELETE.png">
-</div></br>
+</div></br></br>
 <ins><strong>Denotes:</strong></ins> Deleting this folder shall **remove** essential software and/or drivers from your PS2 MemoryCard. Proceeding ahead will **break** and remove application listings of system vital apps and dependencies.
 
 <hr>
@@ -28,7 +28,7 @@ Read these carefully, ignoring these crucial indicators might cause catastrophic
 <h3>2. Red Mini-MC</h3> 
 <div class="container">
     <img style="border:2px solid #16537e" align="left" width="400" src="https://raw.githubusercontent.com/ps2wiki/ps2wiki.github.io/refs/heads/main/_posts/PS2-App-System/SAS/2024-08-19-sas-warnings-megapost/assets/Mini-MC_del.png">
-</div> </br>
+</div></br></br>
 <ins><strong>Denotes:</strong></ins> Deleting this folder will remove the selected software from your PS2 MemoryCard. However, it should not break other SAS applications and/or dependencies.  
 
 <hr><hr>
@@ -41,7 +41,7 @@ The following are indicators present on each SAS compliant application's folder'
 <h3>0. Icon</h3>
 <div class="container">
     <img style="border:2px solid #16537e" align="left" width="400" src="https://t4.ftcdn.net/jpg/00/97/62/37/360_F_97623733_LIK9oM8AtlukM5YSJohujC5icsZBgzis.jpg">
-</div>  </br>
+</div></br></br>
 <ins><strong>Denotes:</strong></ins> The heart of SAS, yet to be released. 
 
 <hr>
@@ -49,7 +49,7 @@ The following are indicators present on each SAS compliant application's folder'
 <h3>1. Mini-MC</h3>
 <div class="container">
     <img style="border:2px solid #16537e" align="left" width="400" src="https://raw.githubusercontent.com/ps2wiki/ps2wiki.github.io/refs/heads/main/_posts/PS2-App-System/SAS/2024-08-19-sas-warnings-megapost/assets/Mini-MC.png">
-</div> </br>
+</div></br></br>
 <ins><strong>Denotes:</strong></ins> Standard PS2 ELF format file.    
 <ins><strong>Variants:</strong></ins> (Standard, Copy, Delete)    
 * Copy: <i>Appears when copying the icon</i>  `Left/Green`
@@ -61,7 +61,7 @@ The following are indicators present on each SAS compliant application's folder'
 <h3>2. Mini-Lock</h3>  
 <div class="container">
     <img style="border:2px solid #16537e" align="left" width="400" src="https://raw.githubusercontent.com/ps2wiki/ps2wiki.github.io/refs/heads/main/_posts/PS2-App-System/SAS/2024-08-19-sas-warnings-megapost/assets/Mini-Lock.png">
-</div> </br>
+</div></br></br>
 <ins><strong>Denotes:</strong></ins> Crucial system files/folders.   
 <ins><strong>Variants:</strong></ins> (Standard, Copy)  
 * Copy: <i>Appears when copying the icon</i>  `Right/Open Lock`   
@@ -72,7 +72,7 @@ The following are indicators present on each SAS compliant application's folder'
 <h3>3. Mini-Wrench</h3>
 <div class="container">
     <img style="border:2px solid #16537e" align="left" width="400" src="https://raw.githubusercontent.com/ps2wiki/ps2wiki.github.io/refs/heads/main/_posts/PS2-App-System/SAS/2024-08-19-sas-warnings-megapost/assets/Mini-Wrench_all.png">
-</div> </br>
+</div></br></br>
 <ins><strong>Denotes:</strong></ins> System Configurators.   
 <ins><strong>Variants:</strong></ins> (Standard, Copy, Delete)  
 * Copy: <i>Appears when copying the icon</i>  `Left/Green`
@@ -84,7 +84,7 @@ The following are indicators present on each SAS compliant application's folder'
 <h3>4. Mini-Gears</h3>  
 <div class="container">
     <img style="border:2px solid #16537e" align="left" width="400" src="https://raw.githubusercontent.com/ps2wiki/ps2wiki.github.io/refs/heads/main/_posts/PS2-App-System/SAS/2024-08-19-sas-warnings-megapost/assets/Mini-Gears.png">
-</div> </br>
+</div></br></br>
 <ins><strong>Denotes:</strong></ins> System Configuration files.   
 
 <hr>
@@ -92,7 +92,7 @@ The following are indicators present on each SAS compliant application's folder'
 <h3>5. Mini-RTE</h3>  
 <div class="container">
     <img style="border:2px solid #16537e" align="left" width="400" src="https://raw.githubusercontent.com/ps2wiki/ps2wiki.github.io/refs/heads/main/_posts/PS2-App-System/SAS/2024-08-19-sas-warnings-megapost/assets/Mini-RTE.png">
-</div> </br>
+</div></br></br>
 <ins><strong>Denotes:</strong></ins> RunTime Environments. Supported Applications can launch their code through these without bundling their respective RTE with them within the ELF.  
 
 <hr>
@@ -100,7 +100,7 @@ The following are indicators present on each SAS compliant application's folder'
 <h3>6. Mini-CMDPrompt</h3> 
 <div class="container">
     <img style="border:2px solid #16537e" align="left" width="400" src="https://raw.githubusercontent.com/ps2wiki/ps2wiki.github.io/refs/heads/main/_posts/PS2-App-System/SAS/2024-08-19-sas-warnings-megapost/assets/Mini-CMDPrompt.png">
-</div> </br>
+</div></br></br>
 <ins><strong>Denotes:</strong></ins> A Debugger Application.   
 
 <hr>
@@ -108,7 +108,7 @@ The following are indicators present on each SAS compliant application's folder'
 <h3>7. Mini-BDMA</h3> 
 <div class="container">
     <img style="border:2px solid #16537e" align="left" width="400" src="https://raw.githubusercontent.com/ps2wiki/ps2wiki.github.io/refs/heads/main/_posts/PS2-App-System/SAS/2024-08-19-sas-warnings-megapost/assets/Mini-BDMA.png">
-</div> </br>
+</div></br></br>
 <ins><strong>Denotes:</strong></ins> Folder contains [BDM Assault](https://github.com/israpps/BDMAssault) drivers.   
 
 <hr>
@@ -116,7 +116,7 @@ The following are indicators present on each SAS compliant application's folder'
 <h3>8. Mini-Lua</h3>
 <div class="container">
     <img style="border:2px solid #16537e" align="left" width="400" src="https://raw.githubusercontent.com/ps2wiki/ps2wiki.github.io/refs/heads/main/_posts/PS2-App-System/SAS/2024-08-19-sas-warnings-megapost/assets/Mini-Lua.png">
-</div> </br>
+</div></br></br>
 <ins><strong>Denotes:</strong></ins> Lua Application that supports running with the [Enceladus Runtime Environment](https://github.com/DanielSant0s/Enceladus).   
 
 <hr>
@@ -124,7 +124,7 @@ The following are indicators present on each SAS compliant application's folder'
 <h3>9. Mini-JavaScript</h3>
 <div class="container">
     <img style="border:2px solid #16537e" align="left" width="400" src="https://raw.githubusercontent.com/ps2wiki/ps2wiki.github.io/refs/heads/main/_posts/PS2-App-System/SAS/2024-08-19-sas-warnings-megapost/assets/Mini-JS.png">
-</div> </br>
+</div></br></br>
 <ins><strong>Denotes:</strong></ins>  JavaScript Application that supports running with the [AthenaEnv Runtime Environment](https://github.com/DanielSant0s/AthenaEnv).   
 
 <hr>
