--- a/documentation/homebrew/PS2-App-System/SAS/indicators-and-warnings/indicators-and-warnings.html
+++ b/documentation/homebrew/PS2-App-System/SAS/indicators-and-warnings/indicators-and-warnings.html
@@ -22,8 +22,8 @@ Read these carefully, ignoring these crucial indicators might cause catastrophic
     <img style="border:2px solid #16537e" align="left" width="400" src="https://raw.githubusercontent.com/ps2wiki/ps2wiki.github.io/refs/heads/main/_posts/PS2-App-System/SAS/2024-08-19-sas-warnings-megapost/assets/DELETE.png">
 </div>
 </br></br><div>
-<ins><strong>Denotes:</strong></ins> Deleting this folder shall **remove** essential software and/or drivers from your PS2 MemoryCard. Proceeding ahead will **break** and remove application listings of system vital apps and dependencies.
-</div>
+<h5><ins><strong>Denotes:</strong></ins> Deleting this folder shall **remove** essential software and/or drivers from your PS2 MemoryCard. Proceeding ahead will **break** and remove application listings of system vital apps and dependencies.
+</h5></div>
 
 <hr>
 
