--- a/documentation/homebrew/PS2-App-System/SAS/index.html
+++ b/documentation/homebrew/PS2-App-System/SAS/index.html
@@ -14,3 +14,7 @@ project_status: In Active Development
 <div class="warning">
   <strong>WARNING:</strong> This page is still being worked on. Information might be missing or lacking important context. DO NOT cite this page or any information here as a relevant source till this message disappears.
 </div>
+
+<h3>OSDYS icons:</h3><ol>
+<li><h4>Indicators & Warnings</h4></li>
+</ol>
