--- a/documentation/homebrew/PS2-App-System/SAS/index.html
+++ b/documentation/homebrew/PS2-App-System/SAS/index.html
@@ -16,5 +16,5 @@ project_status: In Active Development
 </div>
 
 <h3>OSDYS icons:</h3><ol>
-<li><h4>Indicators & Warnings</h4></li>
+<li><a href="https://ps2wiki.github.io/documentation/homebrew/PS2-App-System/SAS/indicators-and-warnings/indicators-and-warnings"><h4>Indicators & Warnings</h4></a></li>
 </ol>
