--- a/documentation/homebrew/PS2-App-System/SAS/indicators-and-warnings/i.html
+++ b/documentation/homebrew/PS2-App-System/SAS/indicators-and-warnings/i.html
@@ -1,8 +1,8 @@
 ---
 layout: docs-homebrew
-title: i
+title: 
 subtitle: >-
-  i
+  
 image: https://github.com/ps2wiki/ps2wiki.github.io/blob/upstream/documentation/homebrew/PS2-App-System/SAS/index/sas_thumbnail.jpg?raw=true
 thumbnail: https://github.com/ps2wiki/ps2wiki.github.io/blob/upstream/documentation/homebrew/PS2-App-System/SAS/index/sas_thumbnail.jpg?raw=true
 last_updated: 2024/11/25
