--- a/documentation/homebrew/PS2-App-System/SAS/index.html
+++ b/documentation/homebrew/PS2-App-System/SAS/index.html
@@ -1,6 +1,7 @@
 ---
 layout: docs-homebrew
-title: Save Application System
+title: >-
+  Save Application System
 subtitle: >-
   A new App-System for PS2 which integrates seamlessly into the user's PS2 setup and the general Homebrew-Ecosystem
 
@@ -16,5 +17,5 @@ project_status: In Active Development
 </div>
 
 <h3>OSDYS icons:</h3><ol>
-<li><a href="https://ps2wiki.github.io/documentation/homebrew/PS2-App-System/SAS/indicators-and-warnings/indicators-and-warnings"><h4>Indicators & Warnings</h4></a></li>
+<li><a href="https://ps2wiki.github.io/documentation/homebrew/PS2-App-System/SAS/indicators-and-warnings/indicators-and-warnings"><strong> Indicators & Warnings</strong></a></li>
 </ol>
