--- a/documentation/homebrew/PS2-App-System/SAS/index.html
+++ b/documentation/homebrew/PS2-App-System/SAS/index.html
@@ -3,7 +3,8 @@ layout: docs-homebrew
 title: >-
   Save Application System
 subtitle: >-
-  A new App-System for PS2 which integrates seamlessly into the user's PS2 setup and the general Homebrew-Ecosystem
+  A new App-System for PS2 which integrates seamlessly into the user's 
+  PS2 setup and the general Homebrew-Ecosystem
 
 image: https://github.com/ps2wiki/ps2wiki.github.io/blob/upstream/documentation/homebrew/PS2-App-System/SAS/index/sas_thumbnail.jpg?raw=true
 thumbnail: https://github.com/ps2wiki/ps2wiki.github.io/blob/upstream/documentation/homebrew/PS2-App-System/SAS/index/sas_thumbnail.jpg?raw=true
