--- a/documentation/homebrew/PS2-App-System/SAS/index.html
+++ b/documentation/homebrew/PS2-App-System/SAS/index.html
@@ -10,6 +10,8 @@ image: https://github.com/ps2wiki/ps2wiki.github.io/blob/upstream/documentation/
 thumbnail: https://github.com/ps2wiki/ps2wiki.github.io/blob/upstream/documentation/homebrew/PS2-App-System/SAS/index/sas_thumbnail.jpg?raw=true
 last_updated: 2024/11/25
 project_status: In Active Development
+# authors: korax
+# factcheck: NA
 ---
 
 <!-- Warning -->
