--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ news: >-
   Open PS2 Loader v1.2.0-Beta-2173 has been released on <a href="https://github.com/ps2homebrew/Open-PS2-Loader/releases/tag/latest">GitHub<sup>[↗]</sup></a> !
 
 tips: >-
-  Press the <code>🛆</code> button in the <a href="https://i.ytimg.com/vi/vKqYfOM4Jao/sddefault.jpg">OSD-SYS<sup>[↗]</sup></a> to view your Model Number!
+  The PS2-Logo on the disc drive can be rotated!
 
 #########################
 
