--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 # News & Tips
 
 news: >-
-  Open PS2 Loader v1.2.0-Beta-2177 has been released on <a href="https://github.com/ps2homebrew/Open-PS2-Loader/releases/tag/latest">GitHub<sup>[↗]</sup></a> !
+  Welcome to PS2Wiki, your home for all the latest News and Homebrew for the PS2!
 
 tips: >-
   The PS2-Logo on the disc drive can be rotated!
