--- a/get_started.html
+++ b/get_started.html
@@ -86,7 +86,7 @@ title: Get Started
                     Denote the region the console belongs to. They are mostly irrelevant when it comes to determining the functionality of the console, but knowing your region code is handy when using/installing certain homebrew like <a href="https://www.psx-place.com/threads/fmcb-fhdb-v1-9-series-release-thread.13413/">FreeMCBoot</a>/<a href="https://www.psx-place.com/threads/fmcb-fhdb-v1-9-series-release-thread.13413/">FreeHDBoot</a> or <a href="https://github.com/MechaResearch/MechaPwn">MechaPwn</a>.
                 </br></br>
                 <li><strong>Suffixes:</strong></li>
-                    Can denote anything from a revision to the Color of the console to it being a Special Edition. The most common suffix is <code>R</code> and denotes that the console has a version of DVD Player preinstalled which supports the PS2 IR Remote out of the box. Only used in "SCPH-30000R" models as non-R versions do not have this update preinstalled.
+                    Can denote anything from a revision to the Color of the console to it being a Special Edition. The most common suffix is <code>\n</code> and denotes that the console has a bundled Network Adapter.
             </ul>
     </ul></p>
     <!-- End of 'Getting started with PS2 Modding' -->
