--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ news: >-
   Welcome to PS2Wiki, your home for all the latest News and Homebrew for the PS2!
 
 tips: >-
-  The PS2-Logo on the disc drive can be rotated!
+  You can set compatibility modes for games as well as features like VMC, PADEMU, GSM, etc. in OPL via scrolling to a game and pressing △
 
 #########################
 
