--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 # News & Tips
 
 news: >-
-  Welcome to PS2Wiki, your home for all the latest News and Homebrew for the PS2!
+  Open PS2 Loader v1.2.0-Beta-2173 has been released on <a href="https://github.com/ps2homebrew/Open-PS2-Loader/releases/tag/latest">GitHub<sup>[↗]</sup></a> !
 
 tips: >-
   You can set compatibility modes for games as well as features like VMC, PADEMU, GSM, etc. in OPL via scrolling to a game and pressing <code>△</code>.
