--- a/about.html
+++ b/about.html
@@ -25,6 +25,8 @@ You are however requested to <a href="https://github.com/ps2wiki/ps2wiki.github.
 <h4 id="Disclosures">➜ Disclosures</h4>
 </br><ol><li>This site has been built using <a href="https://pages.github.com">GitHub's Pages feature</a>, <a href="https://jekyllrb.com">Jekyll</a> and <a href="https://github.com/jeffreytse/jekyll-theme-yat">Yat Theme</a> and other technologies. They are each a property of their respective Owner(s) or Author(s) and The PS2Wiki Team or its members do not claim ownership over any of these.</li>
 
+ </br><li>This site also collects some basic information such which pages you visit within the website and your country (as detected) for general enhancements via <a href="https://developers.google.com/analytics">Google Analytics</a>. You can read more about it <a href="https://marketingplatform.google.com/about/analytics/">here</a>.</li>
+  
 </br><li>These terms have been written in good faith to protect the interests of the Users, Creators, Contributors and anyone else who is involved directly or indirectly in the creation of this project. If you believe any point here violates your right as any party mentioned above or otherwise, you can raise an issue <a href="https://github.com/ps2wiki/ps2wiki.github.io/issues/new?assignees=koraxial&labels=documentation&projects=&template=violation.yml&title=%5BVIOLATION%5D%3A+">here</a>.</li></ol> 
 
 </br><div class="note">
