--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@ You are however requested to <a href="https://github.com/ps2wiki/ps2wiki.github.
 </br><li>These terms have been written in good faith to protect the interests of the Users, Creators, Contributors and anyone else who is involved directly or indirectly in the creation of this project. If you believe any point here violates your right as any party mentioned above or otherwise, you can raise an issue <a href="https://github.com/ps2wiki/ps2wiki.github.io/issues/new?assignees=koraxial&labels=documentation&projects=&template=violation.yml&title=%5BVIOLATION%5D%3A+">here</a>.</li></ol> 
 
 </br><div class="note">
-<strong>Note:</strong> The terms mentioned above are subject to change without prior notice.
+<strong>Note:</strong> The terms and any information present on this page are subject to change without prior notice.
 </div> 
 </p>
 
