--- a/documentation/homebrew/PS2-App-System/SAS/index.html
+++ b/documentation/homebrew/PS2-App-System/SAS/index.html
@@ -20,14 +20,14 @@ project_status: In Active Development
   <strong>WARNING:</strong> This page is still being worked on. Information might be missing or lacking important context. DO NOT cite this page or any information here as a relevant source till this message disappears.
 </div>
 
-<h2>➽ Index</h3>
+<h3>➽ Index</h3>
 <h3>➜ OSDYS icons:</h3><ol>
 <h4><li><a href="https://ps2wiki.github.io/documentation/homebrew/PS2-App-System/SAS/indicators-and-warnings/indicators-and-warnings"> Indicators & Warnings</a></li></h4>
 </ol>
 
-<h2>➽ Developed by / Credits:</h3>
-<h4>➜ Project Oversight and Management</h4>
-TnA - UMCS/SAS & PS2Application System visionary.
+<h3>➽ Developed by / Credits:</h3>
+<h4>➜ Project Oversight and Management</h4><ul>
+<li>TnA - UMCS/SAS & PS2Application System visionary</li></ul>
 
 <h4>➜ Developers</h4><ul>
 <li>korax - Apps Archive, ACE testing & other integrations</li>
@@ -43,3 +43,4 @@ TnA - UMCS/SAS & PS2Application System visionary.
 <li>KrahJohlito - OPL SAS MC Structure Integration</li>
 <li>El_isra - KELFBINDER code, POPSLoader patches & Advice</li>
 <li>Spaghetticode (Boon Tobias) - RETROLauncher SAS MC Structure Integration</li></ul>
+</br>
