--- a/documentation/homebrew/PS2-App-System/SAS/index.html
+++ b/documentation/homebrew/PS2-App-System/SAS/index.html
@@ -21,24 +21,24 @@ project_status: In Active Development
 </div>
 
 <h2>➽ Index</h2>
-<h3>➜ OSDYS icons:</h3><ol>
+<strong>➜ OSDYS icons:</strong><ol>
 <h4><li><a href="https://ps2wiki.github.io/documentation/homebrew/PS2-App-System/SAS/indicators-and-warnings/indicators-and-warnings"> Indicators & Warnings</a></li></h4>
 </ol>
 
 <h2>➽ Developed by / Credits:</h2>
-<h4>➜ Project Oversight and Management</h4><ul>
+<strong>➜ Project Oversight and Management</strong><ul>
 <li>TnA - UMCS/SAS & PS2Application System visionary</li></ul>
 
-<h4>➜ Developers</h4><ul>
+<strong>➜ Developers</strong><ul>
 <li>korax - Apps Archive, ACE testing & other integrations</li>
 <li>nuno6573 - SAS Mapped XEB+ plugins, wLE/uLE, FMCB/FHDB & other integrations</li></ul>
 
-<h4>➜ psu Team</h4><ul>
+<strong>➜ psu Team</strong><ul>
 <li>Ripto - .psu Packer & title.cfg Creator</li>
 <li>korax - Save Icons</li>
 <li>SpaceCoyote - Save Icons</li></ul>
 
-<h4>➜ Contributors</h4><ul>
+<strong>➜ Contributors</strong><ul>
 <li>Berion - Art, QA & PS2HDH Support</li>
 <li>KrahJohlito - OPL SAS MC Structure Integration</li>
 <li>El_isra - KELFBINDER code, POPSLoader patches & Advice</li>
