--- a/documentation/homebrew/PS2-App-System/SAS/index.html
+++ b/documentation/homebrew/PS2-App-System/SAS/index.html
@@ -22,25 +22,26 @@ project_status: In Active Development
 
 <h2>➽ Index</h2>
 <strong>➜ OSDYS icons:</strong><ol>
-<h4><li><a href="https://ps2wiki.github.io/documentation/homebrew/PS2-App-System/SAS/indicators-and-warnings/indicators-and-warnings"> Indicators & Warnings</a></li></h4>
+<li><a href="https://ps2wiki.github.io/documentation/homebrew/PS2-App-System/SAS/indicators-and-warnings/indicators-and-warnings"> Indicators & Warnings</a></li>
 </ol>
 
-<h2>➽ Developed by / Credits:</h2>
-<strong>➜ Project Oversight and Management</strong><ul>
-<li>TnA - UMCS/SAS & PS2Application System visionary</li></ul>
+<h2>➽ Developed by / Credits:</h2><ul>
+<li><strong>➜ Project Oversight and Management</strong></li><ul>
+<li>TnA - UMCS/SAS & PS2Application System visionary</li></ul></br>
 
-<strong>➜ Developers</strong><ul>
+<li><strong>➜ Developers</strong></li><ul>
 <li>korax - Apps Archive, ACE testing & other integrations</li>
-<li>nuno6573 - SAS Mapped XEB+ plugins, wLE/uLE, FMCB/FHDB & other integrations</li></ul>
+<li>nuno6573 - SAS Mapped XEB+ plugins, wLE/uLE, FMCB/FHDB & other integrations</li></ul></br>
 
-<strong>➜ psu Team</strong><ul>
+<li><strong>➜ psu Team</strong></li><ul>
 <li>Ripto - .psu Packer & title.cfg Creator</li>
 <li>korax - Save Icons</li>
-<li>SpaceCoyote - Save Icons</li></ul>
+<li>SpaceCoyote - Save Icons</li></ul></br>
 
-<strong>➜ Contributors</strong><ul>
+<li><strong>➜ Contributors</strong></li><ul>
 <li>Berion - Art, QA & PS2HDH Support</li>
 <li>KrahJohlito - OPL SAS MC Structure Integration</li>
 <li>El_isra - KELFBINDER code, POPSLoader patches & Advice</li>
 <li>Spaghetticode (Boon Tobias) - RETROLauncher SAS MC Structure Integration</li></ul>
+</ul>
 </br>
