--- a/documentation/homebrew/PS2-App-System/SAS/index.html
+++ b/documentation/homebrew/PS2-App-System/SAS/index.html
@@ -20,28 +20,29 @@ project_status: In Active Development
   <strong>WARNING:</strong> This page is still being worked on. Information might be missing or lacking important context. DO NOT cite this page or any information here as a relevant source till this message disappears.
 </div>
 
-<h2>➽ Index</h2>
-<strong>➜ OSDYS icons:</strong><ol>
-<li><a href="https://ps2wiki.github.io/documentation/homebrew/PS2-App-System/SAS/indicators-and-warnings/indicators-and-warnings"> Indicators & Warnings</a></li>
-</ol>
+<h2>➽ Index</h2><ul>
+  <li><strong>➜ OSDYS icons:</strong></li><ol>
+  <li><a href="https://ps2wiki.github.io/documentation/homebrew/PS2-App-System/SAS/indicators-and-warnings/indicators-and-warnings"> Indicators & Warnings</a></li>
+  </ol>
+</ul>
 
 <h2>➽ Developed by / Credits:</h2><ul>
-<li><strong>➜ Project Oversight and Management</strong></li><ul>
-<li>TnA - UMCS/SAS & PS2Application System visionary</li></ul></br>
-
-<li><strong>➜ Developers</strong></li><ul>
-<li>korax - Apps Archive, ACE testing & other integrations</li>
-<li>nuno6573 - SAS Mapped XEB+ plugins, wLE/uLE, FMCB/FHDB & other integrations</li></ul></br>
-
-<li><strong>➜ psu Team</strong></li><ul>
-<li>Ripto - .psu Packer & title.cfg Creator</li>
-<li>korax - Save Icons</li>
-<li>SpaceCoyote - Save Icons</li></ul></br>
-
-<li><strong>➜ Contributors</strong></li><ul>
-<li>Berion - Art, QA & PS2HDH Support</li>
-<li>KrahJohlito - OPL SAS MC Structure Integration</li>
-<li>El_isra - KELFBINDER code, POPSLoader patches & Advice</li>
-<li>Spaghetticode (Boon Tobias) - RETROLauncher SAS MC Structure Integration</li></ul>
+  <li><strong>➜ Project Oversight and Management</strong></li><ul>
+  <li>TnA - UMCS/SAS & PS2Application System visionary</li></ul></br>
+  
+  <li><strong>➜ Developers</strong></li><ul>
+  <li>korax - Apps Archive, ACE testing & other integrations</li>
+  <li>nuno6573 - SAS Mapped XEB+ plugins, wLE/uLE, FMCB/FHDB & other integrations</li></ul></br>
+  
+  <li><strong>➜ psu Team</strong></li><ul>
+  <li>Ripto - .psu Packer & title.cfg Creator</li>
+  <li>korax - Save Icons</li>
+  <li>SpaceCoyote - Save Icons</li></ul></br>
+  
+  <li><strong>➜ Contributors</strong></li><ul>
+  <li>Berion - Art, QA & PS2HDH Support</li>
+  <li>KrahJohlito - OPL SAS MC Structure Integration</li>
+  <li>El_isra - KELFBINDER code, POPSLoader patches & Advice</li>
+  <li>Spaghetticode (Boon Tobias) - RETROLauncher SAS MC Structure Integration</li></ul>
 </ul>
 </br>
