--- a/documentation/homebrew/PS2-App-System/SAS/index.html
+++ b/documentation/homebrew/PS2-App-System/SAS/index.html
@@ -31,7 +31,7 @@ project_status: In Active Development
   <li>TnA - UMCS/SAS & PS2Application System visionary</li></ul></br>
   
   <li><strong>➜ Developers</strong></li><ul>
-  <li>korax - Apps Archive, ACE testing & other integrations</li>
+  <li>korax - Apps Archive</li>
   <li>nuno6573 - SAS Mapped XEB+ plugins, wLE/uLE, FMCB/FHDB & other integrations</li></ul></br>
   
   <li><strong>➜ psu Team</strong></li><ul>
