--- a/documentation/homebrew/PS2-App-System/SAS/index.html
+++ b/documentation/homebrew/PS2-App-System/SAS/index.html
@@ -21,9 +21,9 @@ project_status: In Active Development
 </div>
 
 <h2>➽ Index</h2><ol>
-  <li><strong>➜ OSDYS icons:</strong></li><ol>
+  <li><strong>➜ OSDYS icons:</strong><ol>
   <li><a href="https://ps2wiki.github.io/documentation/homebrew/PS2-App-System/SAS/indicators-and-warnings/indicators-and-warnings"> Indicators & Warnings</a></li>
-  </ol>
+  </ol></li>
 </ol>
 
 <h2>➽ Developed by / Credits:</h2><ul>
