--- a/documentation/homebrew/PS2-App-System/SAS/index.html
+++ b/documentation/homebrew/PS2-App-System/SAS/index.html
@@ -20,7 +20,7 @@ project_status: In Active Development
   <strong>WARNING:</strong> This page is still being worked on. Information might be missing or lacking important context. DO NOT cite this page or any information here as a relevant source till this message disappears.
 </div>
 
-<h2>➽ Index</h2><ol>
+<h2>➽ Index</h2><ol type="A">
   <li><strong>➜ OSDYS icons:</strong><ol>
   <li><a href="https://ps2wiki.github.io/documentation/homebrew/PS2-App-System/SAS/indicators-and-warnings/indicators-and-warnings"> Indicators & Warnings</a></li>
   </ol></li>
