--- a/documentation/homebrew/PS2-App-System/SAS/index.html
+++ b/documentation/homebrew/PS2-App-System/SAS/index.html
@@ -46,5 +46,8 @@ project_status: In Active Development
   <li>KrahJohlito - OPL SAS MC Structure Integration</li>
   <li>El_isra - KELFBINDER code, POPSLoader patches & Advice</li>
   <li>Spaghetticode (Boon Tobias) - RETROLauncher SAS MC Structure Integration</li></ul>
-</ul>
+</ul></br>
+ <div class="note">
+ All Apps are a property of their respective Developer(s). For more deatils read the <code>Meta</code> file within the respective SAS-Compliant Program's Folder.
+</div> 
 </br>
