--- a/documentation/homebrew/PS2-App-System/SAS/index.html
+++ b/documentation/homebrew/PS2-App-System/SAS/index.html
@@ -48,6 +48,6 @@ project_status: In Active Development
   <li>Spaghetticode (Boon Tobias) - RETROLauncher SAS MC Structure Integration</li></ul>
 </ul></br>
  <div class="note">
- All Apps are a property of their respective Developer(s). For more deatils read the <code>Meta</code> file within the respective SAS-Compliant Program's Folder.
+ <strong>Note: </strong>All Apps are a property of their respective Developer(s). For more deatils read the <code>Meta</code> file within the respective SAS-Compliant Program's Folder.
 </div> 
 </br>
