--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ news: >-
   Open PS2 Loader v1.2.0-Beta-2182 has been released on <a href="https://github.com/ps2homebrew/Open-PS2-Loader/releases/tag/latest">GitHub<sup>[↗]</sup></a> !
 
 tips: >-
-  You can set compatibility modes for games as well as features like VMC, PADEMU, GSM, etc. in OPL via scrolling to a game and pressing <code>△</code>.
+  You can launch FHDB with an FMCB card inserted, if you turn 'Skiphdd' in FMCB's OSDSYS settings OFF
 
 #########################
 
