--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ news: >-
   Open PS2 Loader v1.2.0-Beta-2182 has been released on <a href="https://github.com/ps2homebrew/Open-PS2-Loader/releases/tag/latest">GitHub<sup>[↗]</sup></a> !
 
 tips: >-
-  You can launch FHDB with an FMCB card inserted, if you turn 'SkipHDD' in FMCB's OSDSYS settings 'OFF'
+  You can launch FHDB with an FMCB card inserted, if you turn 'SkipHDD' in FMCB's OSDSYS settings 'OFF'.
 
 #########################
 
